--- a/gb/22/9/22/n13830176.md
+++ b/gb/22/9/22/n13830176.md
@@ -1,56 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>111年桃园市优质红茶评鉴比赛颁奖典礼</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13830177-576356.jpg" />
 <h6>桃园市优质红茶评鉴比赛颁奖，以表扬在桃园市茶产业辛勤努力。（桃园市农业局提供）
 </h6>
 <hr>
-<p>【大纪元2022年09月22日讯】（大纪元记者徐乃义台湾桃园报导）一年一度<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E5%B8%82.md#1">桃园市</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%98%E8%B4%A8%E7%BA%A2%E8%8C%B6.md#1">优质红茶</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%AF%84%E9%89%B4%E6%AF%94%E8%B5%9B.md#1">评鉴比赛</a>，在龙潭区农会揭晓评鉴结果，并订23日下午2时假桃园市府B2大礼堂举办颁奖典礼，以表扬在桃园市茶产业辛勤努力、表现优秀的各区茶农朋友。</p>
-<figure id="attachment_13830178" aria-describedby="caption-attachment-13830178" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13830178-576357-e1663828142562.jpg"><img class="size-medium wp-image-13830178" src="https://i.epochtimes.com/assets/uploads/2022/09/id13830178-576357-450x240.jpg" alt="" width="450" b="240" /></a><figcaption id="caption-attachment-13830178" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E5%B8%82.md#1">桃园市</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%98%E8%B4%A8%E7%BA%A2%E8%8C%B6.md#1">优质红茶</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%AF%84%E9%89%B4%E6%AF%94%E8%B5%9B.md#1">评鉴比赛</a>颁奖，以表扬在桃园市茶产业辛勤努力。（桃园市农业局提供）</figcaption></figure>
+<p>【大纪元2022年09月22日讯】（大纪元记者徐乃义台湾桃园报导）一年一度桃园市优质红茶评鉴比赛，在龙潭区农会揭晓评鉴结果，并订23日下午2时假桃园市府B2大礼堂举办颁奖典礼，以表扬在桃园市茶产业辛勤努力、表现优秀的各区茶农朋友。</p>
+<figure id="attachment_13830178" aria-describedby="caption-attachment-13830178" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13830178-576357-e1663828142562.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-13830178" src="https://i.epochtimes.com/assets/uploads/2022/09/id13830178-576357-450x240.jpg" alt="" width="450" b="240" /></a><figcaption id="caption-attachment-13830178" class="wp-caption-text">桃园市优质红茶评鉴比赛颁奖，以表扬在桃园市茶产业辛勤努力。（桃园市农业局提供）</figcaption></figure>
 <p>为发展地方特色茶，桃园市府自98年起辅导茶农制作精致手采红茶，并以自创品牌“桃映红茶”之名发表上市。桃映红茶取名自唐诗“人面桃花相映红”，因桃园市花为桃花，红茶茶汤红艳，桃花与红茶茶汤相映，故命名为“桃映红茶”。以桃园原生种的茶菁制成的桃映红茶，经由茶农精心培制，其外观纤细匀称，色泽墨黑鲜润，茶汤红艳明亮，香气淡雅，滋味甘醇浓郁，冲泡久时也不易有涩感，不需添加糖，冷或热饮皆宜，实乃红茶中之极品。</p>
-<figure id="attachment_13830179" aria-describedby="caption-attachment-13830179" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13830179-576358-e1663828119789.jpg"><img class="size-full wp-image-13830179" src="https://i.epochtimes.com/assets/uploads/2022/09/id13830179-576358-e1663828119789.jpg" alt="" width="450" b="572" /></a><figcaption id="caption-attachment-13830179" class="wp-caption-text">桃园市优质红茶评鉴比赛颁奖，以表扬在桃园市茶产业辛勤努力。（桃园市农业局提供）</figcaption></figure>
+<figure id="attachment_13830179" aria-describedby="caption-attachment-13830179" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13830179-576358-e1663828119789.jpg"><img loading="lazy" decoding="async" class="size-full wp-image-13830179" src="https://i.epochtimes.com/assets/uploads/2022/09/id13830179-576358-e1663828119789.jpg" alt="" width="450" b="572" /></a><figcaption id="caption-attachment-13830179" class="wp-caption-text">桃园市优质红茶评鉴比赛颁奖，以表扬在桃园市茶产业辛勤努力。（桃园市农业局提供）</figcaption></figure>
 <p>本次评鉴，参赛点数共438点(去年360点)，较去年增加1成多，竞争相当激烈，由茶业改良场专家依据茶品外观、水色及香味进行评分，选出包含特等奖1名、头等奖8名、金质、银质及优质等各奖项，并由来自龙潭三洽水地区的农友廖文金夺冠，制茶功力相当了得！荣获特等的廖文金农友，从事茶叶农作已逾40年，因为对茶产业怀抱热情，持续累积经验与技术，凭借着龙潭茶区优良的环境及传承古法的制茶技术，多次获得桃园市优质红茶评鉴比赛及全国东方美人茶评鉴比赛大奖，制作的茶叶品质稳定，深获评审及大众好评。</p>
-<figure id="attachment_13830180" aria-describedby="caption-attachment-13830180" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13830180-576359-e1663827975490.jpg"><img class="size-medium wp-image-13830180" src="https://i.epochtimes.com/assets/uploads/2022/09/id13830180-576359-450x331.jpg" alt="" width="450" b="331" /></a><figcaption id="caption-attachment-13830180" class="wp-caption-text">桃园市优质红茶评鉴比赛颁奖，以表扬在桃园市茶产业辛勤努力。（桃园市农业局提供）</figcaption></figure>
+<figure id="attachment_13830180" aria-describedby="caption-attachment-13830180" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13830180-576359-e1663827975490.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-13830180" src="https://i.epochtimes.com/assets/uploads/2022/09/id13830180-576359-450x331.jpg" alt="" width="450" b="331" /></a><figcaption id="caption-attachment-13830180" class="wp-caption-text">桃园市优质红茶评鉴比赛颁奖，以表扬在桃园市茶产业辛勤努力。（桃园市农业局提供）</figcaption></figure>
 <p>这几年气候异常，茶产业也面临极大的考验：109及110年皆逢大旱停灌，台湾面临50年以来最大的旱灾，今年则是在茶菁收成时遇到豪雨，面对大自然的挑战，桃园市优秀茶农们展现精湛的制茶技艺，依照“看天气做茶，视茶菁做茶”的概念，发挥积累多年的制茶真功夫，新上市的茶品依旧维持相当高的水准，茶农们的态度与技术着实值得喝采。</p>
 <p>为了守护消费者健康安全，桃园市府于赛前缴茶时即办理农药残留抽测工作，且为让评鉴结果更具识别性，特别规划出茶叶分级包装制度，并于茶罐外加上“防伪封签”，这标签代表安全也代表政府认证，层层严格的把关就是为了让消费者买得安心、喝得放心，此次参与评鉴茶品质相当好，非常值得消费者选购。◇</p>
 <p>责任编辑：李悦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/17/n10720271.md#1">龟山区林雨旸农友  桃园优质红茶评鉴比赛特优</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/28/n10747719.md#1">桃园优质红茶评鉴  品牌化和高值化发展绿金产业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/21/n10991105.md#1">桃园好茶进驻桃机免税店及机捷A18站</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/4/n11497670.md#1">桃园市优质红茶评鉴比赛 钟桂香获特等奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/11/12/n12543776.md#1">桃园好茶红茶评鉴 来茶乡品好茶发扬茶金产业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/8/n13219093.md#1">110年度桃园市优质红茶评鉴比赛颁奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/29/n13268747.md#1">“桃映红茶”新装 郑文灿肯定发扬绿金产业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/4/n13352298.md#1">独特的茶道空间设计    沏一杯人生好茶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/2/n13816023.md#1">111年度桃园市优质红茶评鉴比赛结果出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132502.md#1">2023桃园市闽南语说故事比赛颁奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/17/n10720271.md#1">龟山区林雨旸农友  桃园优质红茶评鉴比赛特优</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/28/n10747719.md#1">桃园优质红茶评鉴  品牌化和高值化发展绿金产业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/21/n10991105.md#1">桃园好茶进驻桃机免税店及机捷A18站</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/4/n11497670.md#1">桃园市优质红茶评鉴比赛 钟桂香获特等奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/11/12/n12543776.md#1">桃园好茶红茶评鉴 来茶乡品好茶发扬茶金产业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/8/n13219093.md#1">110年度桃园市优质红茶评鉴比赛颁奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/29/n13268747.md#1">“桃映红茶”新装 郑文灿肯定发扬绿金产业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/4/n13352298.md#1">独特的茶道空间设计    沏一杯人生好茶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/2/n13816023.md#1">111年度桃园市优质红茶评鉴比赛结果出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307972.md#1">桃园2024年东方美人茶评鉴颁奖 辅导茶农智慧农耕</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/2/23/n11888963.md#1" target="_blank">王友群：唐山大地震是天灾更是人祸</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977994.md#1" target="_blank">林辉：一篇文章惹毛动怒 民间顾准拒辱自尽</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/14/n3683060.md#1" target="_blank">【石静笛】：网在收！活摘器官再成舆论焦点</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125832.md#1">日本450年墨条制作源于中国 每根逾千美金</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127216.md#1">为何每个家庭皆应书香满屋酿人生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120803.md#1">【古道人生】穷汉终身未婚 晚年却得子孙奉养</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127382.md#1">【未解之谜】八阵图之谜（下）奇妙的幻术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/4/n14129255.md#1">时空跨度三千年 古代兵器攻略特展精锐尽出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14132076.md#1">【探索时分】中国击落美国B-21？又一假说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132210.md#1">【时事金扫描】以色列攻入哈马斯最后据点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14131730.md#1">【中国禁闻】传秦刚身亡 火箭军遭清洗内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131243.md#1">美媒：俄副外长6月来京 向习通报秦刚叛变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130528.md#1">周庭拒国安法不回香港 洛杉矶港人感欣慰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130601.md#1">禁烧秸秆20年 中共承认加重了农作物病虫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129945.md#1">朴轸永想将自己女儿与Rain女儿 培养成女团</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131355.md#1">那英疑遭封杀 镜头被删光 微博停更5个月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131256.md#1">刘德华结婚15年 首曝老婆真名不是“朱丽倩”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130535.md#1">杨颖微博过亿粉丝账号被降级 遭封杀近况曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131113.md#1">台湾“五月天”在大陆陷麻烦 遭官媒轮番批</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：亚马逊2023岁末商品促销</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126671.md#1">大雪节气不怕冷?这样预防天冷8症状</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/26/n14124284.md#1">40岁大脑开始退化！做对5件事防失智 大脑变聪明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/4/n14129876.md#1">这种常见病毒可致6种癌 1种疫苗可预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/25/n14124063.md#1">芦荟活性成分超70种 这样吃控血糖很有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/22/n13830176.htm">111年桃园市优质红茶评鉴比赛颁奖典礼</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/9/22/n13830176.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/22/n13830176.htm">111年桃园市优质红茶评鉴比赛颁奖典礼</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/22/n13830176.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
